--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,8 @@
 :root {
-    --form-color: #ff0000;
-    --form-color-lower: #FFF3F3;
+    --red: #ff0000;
+    --red-lower: rgb(255, 243, 243);
+    --blue: #0000ff;
+    --blue-lower: rgb(243, 243, 255);
     --black: #000;
     --white: #fff;
 }
@@ -30,12 +32,12 @@ form {
 
 legend {
     background-color: transparent;
-    color: var(--form-color);
+    color: var(--red);
     font-weight: bold;
 }
 
 fieldset {
-    border: 1.5px solid var(--form-color);
+    border: 1.5px solid var(--red);
     padding: 0.5rem 1rem;
     margin-top: 0.5rem;
 }
@@ -48,8 +50,8 @@ input {
     margin: 0 0 .25rem 0;
     text-align: center;
     padding: 0.25rem 1rem;
-    border: 1.5px solid var(--form-color);
-    background-color: var(--form-color-lower);
+    border: 1.5px solid var(--red);
+    background-color: var(--red-lower);
     border-radius: 5px;
 }
 
